fixed windowText for different high-low contrast accessibility.

--- a/src/client/assets/stylesheets/sass/components/_daqitable.scss
+++ b/src/client/assets/stylesheets/sass/components/_daqitable.scss
@@ -87,7 +87,7 @@ svg|foreignObject {
 
  .aq-forecast-item:last-child { 
   .aq-forecast-dd.daqi-tag--2 {
-      border-right: 1px solid govuk-colour("black"); 
+      border-right: 1px solid windowText; 
    } 
   }
 }
